# go_scrcpy_recv

./: .gitignore  LICENSE  README.md  c_exports.go  scrcpy_recv.go
cpp/: CMakeLists.txt  CMakePresets.json  frame_img_callback.cpp  frame_img_callback.h  logging.cpp  logging.h  model.h  scrcpy_ctrl_handler.cpp  scrcpy_ctrl_handler.h  scrcpy_desktop.cpp  scrcpy_desktop.h  scrcpy_support.cpp  scrcpy_support.h  scrcpy_video_decoder.cpp  socket_lib.cpp  socket_lib.h  utils.cpp  utils.h
cpp/src/: CMakeLists.txt  frame_img_callback.cpp  frame_img_callback.h  logging.cpp  logging.h  model.h  resize_img.cpp  scrcpy_ctrl_handler.cpp  scrcpy_ctrl_handler.h  scrcpy_demo_app.cpp  scrcpy_demo_app.h  scrcpy_support.cpp  scrcpy_support.h  scrcpy_video_decoder.cpp  scrcpy_video_decoder.h  socket_lib.cpp  socket_lib.h  utils.cpp  utils.h
cpp/tests/: CMakeLists.txt  data.h264  test_client.cpp  test_client.h  test_frame_img_callback.cpp  test_models.h  test_scrcpy_ctrl_handler.cpp  test_scrcpy_support.cpp  test_svr.cpp  test_svr.h  test_utils.cpp
examples/: basic.go
lib/ffmpeg-n5.1.3-win64-gpl-shared-5.1/doc/: ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html
lib/ffmpeg-n5.1.3-win64-gpl-shared-5.1/include/libavutil/: ffversion.h
lib/scrcpy_recv_bin/: scrcpy_desktop.lib  scrcpy_recv.lib
scrcpy_recv/: scrcpy_recv.h
scripts/: adb-prepare.ps1  build.bat  scrcpy-server-debug
